<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_default" translatable="false">Tallinn</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_status_key">loc-status</string>
    <string name="pref_units_default">Metric</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_summary">Choose preferred units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="action_view_on_map">Map</string>
    <string name="action_share">Share</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- empty view texts -->
    <string name="empty_forecast_list_view">No weather information available</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_view_no_network">No weather information available. The network is not available</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>


    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s
    </xliff:g></string>
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_pressure">
        Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>
    <string name="format_humidity">
        Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>
    <string name="content_description_weather_icon">Weather icon</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.pepela.com</string>
    <string name="content_authority">com.pepela.sunshine.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- string for icon pack preference -->
    <string name="pref_icon_pack_title">Icon pack</string>
    <string name="pref_icon_pack_key">icons</string>
    <string name="pref_icon_pack_summary">Choose icon pack</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">
        https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png
    </string>
    <string name="pref_art_pack_label_sunshine">Default</string>
    <string name="pref_art_pack_label_cute_dogs">Same as default</string>

    <!-- Value in SharedPreferences for icon art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>


</resources>
