<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pepela.sunshine.sunshine.views.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title"
        app:maxLength="20"
        app:minLength="3" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_names"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_summary"
        android:title="@string/pref_units_title" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

    <ListPreference
        android:entries="@array/pref_icon_pack_names"
        android:entryValues="@array/pref_icon_pack_values"
        android:key="@string/pref_icon_pack_key"
        android:summary="@string/pref_icon_pack_summary"
        android:title="@string/pref_icon_pack_title" />
</PreferenceScreen>